examples/errors/bunny.runtime.ts
// AUTO-GENERATED by bunny. Installs the runtime globals declared in
// `bunny.d.ts`. Compiled .ts files load this via a side-effect import
// at the top of each module so the globals exist before user code
// runs. Idempotent — re-imports are no-ops.
type Result<T, E> = { ok: true; value: T } | { ok: false; error: E };

const g = globalThis as Record<string, unknown>;
if (typeof g.Ok !== "function") {
  g.Ok = <T>(value: T): Result<T, never> => ({ ok: true, value });
  g.Err = <E>(error: E): Result<never, E> => ({ ok: false, error });
  g.isOk = <T, E>(r: Result<T, E>): boolean => r.ok;
  g.isErr = <T, E>(r: Result<T, E>): boolean => !r.ok;
  g.unwrap = <T, E>(r: Result<T, E>): T => {
    if (r.ok) return r.value;
    throw new Error(typeof r.error === "string" ? r.error : JSON.stringify(r.error));
  };
  g.unwrapOr = <T, E>(r: Result<T, E>, fallback: T): T => (r.ok ? r.value : fallback);
  g.mapResult = <T, U, E>(r: Result<T, E>, fn: (value: T) => U): Result<U, E> =>
    r.ok ? { ok: true, value: fn(r.value) } : r;
  g.mapErr = <T, E, F>(r: Result<T, E>, fn: (error: E) => F): Result<T, F> =>
    r.ok ? r : { ok: false, error: fn(r.error) };
  g.andThen = <T, U, E>(r: Result<T, E>, fn: (value: T) => Result<U, E>): Result<U, E> =>
    r.ok ? fn(r.value) : r;
}

export {};
